@@ -7,6 +7,7 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -14,6 +15,10 @@ import java.util.Objects;
 import jp.co.kin.common.log.Logger;
 import jp.co.kin.common.log.LoggerFactory;
 
+/**
+ * BeanUtil
+ *
+ */
 public class BeanUtil {
 
 	/** LOG */
@@ -176,7 +181,7 @@ public class BeanUtil {
 		List<Field> fieldList = new ArrayList<>();
 		Class<?> tmpClass = clazz;
 		while (BeanUtil.notNull(tmpClass)) {
-			fieldList.addAll(List.of(tmpClass.getDeclaredFields()));
+			fieldList.addAll(Arrays.asList(tmpClass.getDeclaredFields()));
 			tmpClass = tmpClass.getSuperclass();
 		}
 		return fieldList;
